[gd_scene load_steps=3 format=3 uid="uid://bg0bfcampdd1v"]

[ext_resource type="Script" path="res://scripts/components/door_check.gd" id="1_21yny"]
[ext_resource type="LabelSettings" uid="uid://c7uayjepbooid" path="res://assets/font/label_sets.tres" id="2_oyqc7"]

[node name="DoorCheck" type="Area2D"]
z_index = 10
collision_layer = 0
script = ExtResource("1_21yny")

[node name="PassLabel" type="Label" parent="."]
visible = false
offset_left = -81.0
offset_top = -17.0
offset_right = 80.0
offset_bottom = 19.0
size_flags_horizontal = 4
text = "Good Job
Press [E] 
to move on!"
label_settings = ExtResource("2_oyqc7")
horizontal_alignment = 1

[node name="BlockLabel" type="Label" parent="."]
visible = false
offset_left = -81.0
offset_top = -23.0
offset_right = 80.0
offset_bottom = 13.0
size_flags_horizontal = 4
text = "Before you can leave
you must clear
the room!"
label_settings = ExtResource("2_oyqc7")
horizontal_alignment = 1

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
